YOZIFY 3.0: GILBERT EDITION

--- a/popup.html
+++ b/popup.html
@@ -42,6 +42,7 @@
     <div id="intro">Show this page to...</div>
     <button id="yoz">Yoz!</div>
     <button id="dexter">Dexter!</div>
+    <button id="gilbert">Gilbert!</div>
   </body>
 </html>
 
